# YOKAI-Runtime

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
content/: AIScene.json  ClusteredLightingDemo.json  LectureTheatre.json  PhysicsDemo.json  scene.json  sponza.json  test1.json
content/Shaders/: clusterGenerator.comp  clusterLightCuller.comp  hdr.frag  lightDebug.frag  lightDebug.vert  light_accumulation.frag  light_accumulation.vert  light_culling.comp  light_cullingfkd.comp  pbr.frag
content/demoScene/models/: LectureTheatre.gltf
lib/: CMakeLists.txt
src/: CMakeLists.txt  DemoScene.cpp  DemoScene.hpp  main.cpp
src/AIScene/: AIScene.cpp  AIScene.hpp  CubeScript.cpp  CubeScript.hpp  NPCScript.cpp  NPCScript.hpp
src/AIScene/AIComponents/: AffordanceSystem.cpp  AffordanceSystem.hpp  BiteAffordance.cpp  BiteAffordance.hpp  EmotionSystem.cpp  EmotionSystem.hpp  IAffordance.hpp  PickupAffordance.cpp  PickupAffordance.hpp
src/AIScene/AIScripts/: BlakeScript.cpp  BlakeScript.hpp  CubeScript.cpp  CubeScript.hpp  DogScript.cpp  DogScript.hpp  ZombieScript.cpp  ZombieScript.hpp
src/CharliePhysics/: CharliePhysics.cpp  CharliePhysics.hpp
src/Common/: PlayerScript.cpp  PlayerScript.hpp
src/ConnorsPhysicsScene/: ConnorsPhysicsScene.cpp  ConnorsPhysicsScene.hpp
src/DemoScene/: DemoScene.cpp  DemoScene.hpp  PlayerScript.cpp  PlayerScript.hpp  ScuffedPhysicsComponent.cpp  ScuffedPhysicsComponent.hpp
src/LightingScene/: LightingScene.cpp  LightingScene.hpp
src/PhysicsScene/: PhysicsScene.cpp  PhysicsScene.hpp
tests/: CMakeLists.txt
(+39 files in other folders)
